ecmascript/parser/tests/test262-error-references/fail/04bc213db9cd1130.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/04bc213db9cd1130.js:1:26
  |
1 | function *g() { function yield() {} }
  |                          ^^^^^

